--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
+    "cloudinary": "^2.7.0",
     "mysql2": "^3.14.4",
     "next": "15.5.2",
     "react": "19.1.0",
